--- a/app/views/students/games.html.erb
+++ b/app/views/students/games.html.erb
@@ -1,6 +1,53 @@
-<h2> Matching game </h2>
 
-<p> Watch the 3 sections. Match the verb to the associated "words".</p>
+<h3> Matching Game </h3>
+<img id="games" src="http://icons.iconarchive.com/icons/martz90/hex/256/gamehub-icon.png" height="46" width="46">
 
-<script src="games.js"> 
-</script>
+<p> Match the verb to the associated "words".</p>
+	<ul> 
+		<li> PLAY... football / ball / dead / ground / around / chess / music / fight / hockey / the trumpet / the piano.</li>
+	</ul>
+ 
+ <script type="text/javascript">
+
+	var user = {}
+	var responses = [] 
+
+	function id() {
+		var name = prompt('Please enter your NAME.')
+		user.name = name
+	}
+	id();	
+
+	function matchGame() {
+		var firstMatch = prompt('How many word matches can you find with the verb PLAY? Enter one of the words from the list: "football","ball", "dead", "ground", "around", "chess", "music", "fight", "hockey", "the trumpet", "the piano".')
+
+		  firstMatch = firstMatch.toLowerCase();
+
+			  switch (firstMatch) {
+			     	case 'football':
+			     	case 'ball':
+			     	case 'ground':
+			     	case 'around':
+			     	case 'chess':
+			     	case 'music':
+			     	case 'hockey':
+			     	case 'the trumpet':
+			     	case 'the piano':
+			    alert('Correct answer!');
+			    prompt('How many word matches can you find with the verb PLAY? Enter one of the words from the list: "football","ball", "dead", "ground", "around", "chess", "music", "fight", "hockey", "the trumpet", "the piano".')
+			    return matchGame(); 
+			    break;
+			    	case 'dead':
+			    	case 'fight':
+			    alert('Wrong answer!');
+			    	default: 
+			    alert('Try again');
+			    return matchGame();
+			  }
+		  responses.push(firstMatch);
+		}
+
+	matchGame();     
+ </script>
+
+<%= link_to 'Home', root_path %>
