--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,10 @@
 </head>
 <body>
 
-<script src="games.js"></script>
+	<script src="games.js"></script>
+	<script src="posts.js"></script>
+	<script type="text/javascript" src="https://www.dropbox.com/static/api/2/dropins.js" id="dropboxjs" data-app-key="ps8sv6wjj5v125t"></script>
+	<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
 <%= yield %>
 
 </body>
