--- a/app/views/students/media.html.erb
+++ b/app/views/students/media.html.erb
@@ -1,8 +1,11 @@
-<h1> Watch the latest videos </h1>
+<h3> Have fun with the latest media: </h3>
 
+<p>Listen to this song by The Cure to learn the days of the week!
+</p><br>
+
+<iframe width="50%" height="150" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/33332185&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe><br>
+<br>
 <%= link_to 'Home', root_path %><br>
-
-<video id="duolingo" src="duolingo.flv" width="50%" controls></video>
 
 
 
