--- a/app/views/students/home.html.erb
+++ b/app/views/students/home.html.erb
@@ -1,6 +1,8 @@
 <h1> TEFL Platform for 
 	<a href src="localhost:3000/tutor">tutors</a> and <a href src="localhost:3000/students">students</a> </h1>
 
+<p> Educative platform for students and tutors with the aim of fostering English learning. </p>
+
 <nav id="nav_bar">
 	<img id="student" src="http://icons.iconarchive.com/icons/martz90/hex/256/favourites-icon.png" height="46" width="46"> 
 <%= link_to 'All students', students_path %>
