improved text display with tables

--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -2,7 +2,7 @@
 h1 { 
    padding:10px; 
    font-family: verdana; 
-   font-size: 25px;
+   font-size: 20px;
 } 
 
 body { 
@@ -12,7 +12,8 @@ body {
 } 
 
 img {
-   margin-top: px;
+   margin-top: 10px;
+ 
 }
 
 h3 {
@@ -29,17 +30,27 @@ div#posts-titles {
 }
 
 div#posts-content {
-   margin: 50px;
+   margin: 10px;
+}
+
+th {
+   font-size: 14px; 
 }
 
 td {
-   background-color: grey; 
+   font-size: 14px; 
+   background-color: #D4D4BF; 
    padding: 15px;
+}
+
+tbody {
+    box-shadow: 0 0 1em blue;
 }
 
 #nav_bar > a {
    color: black;
-   font-size: 14px;
+   font-size: 16px;
+   margin-left: 10px;
 }
 
 nav{ 
