--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,15 +1,18 @@
 <h1> Students' Wall </h1>
 
-<p>
-	<% @comments.each do |comment| %> 
-<ul>
-	Title: <%= comment.title %><br> 
-	Name: <%= comment.name %><br>
-	Text: <%= comment.text %><br>
-</ul>
-	<button type='button' id='like-button'> Like </button><br>
-</p>
-<% end %>
+<% @comments.each do |comment| %> 
+<table>
+	<th>Title</th>
+	<th>Name</th>
+	<th>Text</th>
 
+	<tr>
+		<td><%= comment.title %></td> 
+		<td><%= comment.name %></td>
+		<td><%= comment.text %></td>
+		<td><button type='button' id='like-button'> Like </button></td>
+	</tr>
+</table>
+<% end %>
 
 <%= link_to 'Home', root_path %>
