--- a/app/views/students/contact.html.erb
+++ b/app/views/students/contact.html.erb
@@ -4,10 +4,10 @@
 
 <% @tutors.each do |tutor| %>
 <p>
-	<ul>
-		<li><%= tutor.name %></li>
-		<li>Email:<%= tutor.email %></li>
-	</ul>
+	<table>
+		<td><%= tutor.name %></td>
+		<td>Email: <%= tutor.email %></td>
+	</table>
 <% end %>
 
 <%= form_for :comment, url: comments_path do |f| %>
