--- a/app/views/students/home.html.erb
+++ b/app/views/students/home.html.erb
@@ -1,43 +1,72 @@
-<h1> TEFL Platform for 
-	<a href src="localhost:3000/tutor">tutors</a> and <a href src="localhost:3000/students">students</a> </h1>
+<!-- Incluir logo de la plataforma <a href src="/tefl_logo.jpg">-->
+	
+	<h1> TEFL Platform for <a href src="localhost:3000/tutor">tutors</a> and <a href src="localhost:3000/students">students</a> </h1>
 
-<p> Educative platform for students and tutors with the aim of fostering English learning. </p>
+	<p> Educative platform for students and tutors with the aim of fostering English learning. </p>
 
-<nav id="nav_bar">
-	<img id="student" src="http://icons.iconarchive.com/icons/martz90/hex/256/favourites-icon.png" height="46" width="46"> 
-<%= link_to 'All students', students_path %>
+	<nav id="nav_bar">
+				<img id="student" src="http://icons.iconarchive.com/icons/martz90/hex/256/favourites-icon.png" height="26" width="26"> 
+			<%= link_to 'All students', students_path %>
 
-	<img id= "contact" src="http://icons.iconarchive.com/icons/martz90/hex/256/email-2-icon.png" height="46" width="46">
-<%= link_to 'Contact', controller: "students", action: "contact" %>
+				<img id= "contact" src="http://icons.iconarchive.com/icons/martz90/hex/256/email-2-icon.png" height="26" width="26">
+			<%= link_to 'Contact', controller: "students", action: "contact" %>
 
-	<img id="games" src="http://icons.iconarchive.com/icons/martz90/hex/256/gamehub-icon.png" height="46" width="46">
-<%= link_to 'Games', controller: "students", action: "games" %>
+				<img id="games" src="http://icons.iconarchive.com/icons/martz90/hex/256/gamehub-icon.png" height="26" width="26">
+			<%= link_to 'Games', controller: "students", action: "games" %>
 
-	<img id="tools" src="http://icons.iconarchive.
-	com/icons/martz90/hex/256/duolingo-icon.png" height="46" width="46">
-<%= link_to 'Tools', controller: "students", action:"tools" %>
+				<img id="tools" src="http://icons.iconarchive.
+				com/icons/martz90/hex/256/duolingo-icon.png" height="26" width="26">
+			<%= link_to 'Tools', controller: "students", action:"tools" %>
 
-	<img id="media" src="http://icons.iconarchive.com/icons/martz90/hex/256/poweramp-icon.png" height="46" width="46">
-<%= link_to 'Media', controller: "students", action: "media" %>
+				<img id="media" src="http://icons.iconarchive.com/icons/martz90/hex/256/poweramp-icon.png" height="26" width="26">
+			<%= link_to 'Media', controller: "students", action: "media" %>
 
-	<img id="posts" src="http://icons.iconarchive.com/icons/martz90/hex/256/wordpress-icon.png" height="46" width="46">
-<%= link_to 'Posts', controller: "posts", action: "index" %>
-</nav>
+				<img id="posts" src="http://icons.iconarchive.com/icons/martz90/hex/256/wordpress-icon.png" height="26" width="26">
+			<%= link_to 'Posts', controller: "posts", action: "index" %>
+	</nav>
 
 <h3>Welcome back!</h3>
 
 <h3> Latest posts: </h3>
-
-<p>
 	<% @posts.each do |post| %> 
-<ul>
-	Title: <%= post.title %><br> 
-	Name: <%= post.name %><br>
-	Text: <%= post.text %><br>
-</ul>
-	<button type='button' id='like-button'> Like </button><br>
-</p>
+	<table> 
+		<div id="posts-titles">
+			<tr>
+		    	<th>Title</th>
+				<th>Name</th>
+				<th>Text</th>
+			</tr>
+		</div>
+	
+	<div id="posts-content">
+		<tr>
+			<td><%= post.title %></td>
+			<td><%= post.name %></td>
+			<td><%= post.text %></td>
+			<td><button type='button' id='like-button'> Like </button></td>
+		</tr>
+	</div>
+</table>
+
 <% end %>
+
+<div id="comments_home">
+	<h3>Latest comments</h3>
+		<% @comments.each do |comment| %> 
+		<table>
+			<th>Title</th>
+			<th>Name</th>
+			<th>Text</th>
+
+			<tr>
+				<td><%= comment.title %></td> 
+				<td><%= comment.name %></td>
+				<td><%= comment.text %></td>
+				<td><button type='button' id='like-button'> Like </button></td>
+			</tr>
+		</table>
+	<% end %>
+</div>
 
 
 
