--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -6,17 +6,17 @@
 	<p> 
 		<% @students.each do |student| %>
 	<table>
-	<tr>
-		<img src="http://icons.iconarchive.com/icons/martz90/hex/256/favourites-icon.png" height="46" width="46"><br>
-		<b><%= student.name %></b><br>
+		<tr>
+			<td><img src="http://icons.iconarchive.com/icons/martz90/hex/256/favourites-icon.png" height="46" width="46"></td>
+			<td><b><%= student.name %></b></td>
 
-		Email: <%= student.email %><br>
-		Age: <%= student.age %><br>
-		Level: <%= student.level %><br>
-		Progress: <%= student.progress %><br>
-		Score: <%= student.score %><br>
-		Comment: <%= student.comment %><br>
-	</tr>
+			<td>Email: <%= student.email %></td>
+			<td>Age: <%= student.age %></td>
+			<td>Level: <%= student.level %></td>
+			<td>Progress: <%= student.progress %></td>
+			<td>Score: <%= student.score %></td>
+			<td>Comment: <%= student.comment %></td>
+		</tr>
 	</table><br>
 
 	<% end %> 
