--- a/app/views/students/home.html.erb
+++ b/app/views/students/home.html.erb
@@ -1,8 +1,9 @@
 <!-- Incluir logo de la plataforma <a href src="/tefl_logo.jpg">-->
 	
-	<h1> TEFL Platform for <a href src="localhost:3000/tutor">tutors</a> and <a href src="localhost:3000/students">students</a> </h1>
+	<h1> TEFL Platform for tutors & students </h1>
 
-	<p> Educative platform for students and tutors with the aim of fostering English learning. </p>
+	<div id="motto"><p> Educative platform for students and tutors with the aim of fostering English learning. </p>
+	</div>
 
 	<nav id="nav_bar">
 				<img id="student" src="http://icons.iconarchive.com/icons/martz90/hex/256/favourites-icon.png" height="26" width="26"> 
