added color to the game, external style link, round border for tables

--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,7 +1,7 @@
 <h1> Students' Wall </h1>
 
 <% @comments.each do |comment| %> 
-<table>
+<table id="comments">
 	<th>Title</th>
 	<th>Name</th>
 	<th>Text</th>
