--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -1,35 +1,87 @@
+div#home-header {
+   text-align: center; 
+   margin-top: 30px;
+   margin-left: 1%;
+   margin-right: 1%; 
+   background-color: #49CBD6;  
+   box-shadow: 0 0 1em black;
+   border-radius: 20px 20px 20px 20px;
+}
 
-h1, div#motto {  
+h1 {  
+   margin-left: 10%; 
+   margin-right: 10%; 
    padding:20px; 
    font-family: verdana; 
-   font-size: 20px;
+   font-size: 25px;
 } 
+
+div#motto {
+   margin-left: 10%; 
+   margin-right: 10%; 
+   padding-bottom: 10px; 
+   font-family: georgia; 
+   font-size: 16px; 
+}
+
+button#like-button, a:hover {
+    background-color: #49CBD6;
+} 
+
+h3 {
+   float: auto; 
+   margin-left: 10%; 
+   margin-right: 10%; 
+}
 
 body { 
    font-family: verdana; 
+   margin-left: 10%;  
+   margin-right: 10%;  
 } 
 
 nav > img{
    margin-top: 20px;
-   margin-bottom: -10px; 
-   margin-left: 10px;
+   margin-bottom: 20px; 
+   margin-right: -40px; 
+   margin-left: 30px; 
+   
+}
+
+#nav_bar > a {
+   color: black;
+   font-size: 16px;
+   margin-top: 10px; 
+   margin-bottom: 10px; 
+   margin-left: -1%;
+   margin-right: 20px; 
+}
+
+#nav_bar{ 
+   margin-left: 10%; 
+   margin-right: 10%; 
 }
 
 h3 {
-   margin-top: 40px
+   margin-top: 40px;
 }
 
 #like-button {
    margin-left: 200px; 
-   box-shadow: 0 0 1em blue;
+   box-shadow: 0 0 1em black;
 }
 
 div#posts-titles {
-   margin: 10px
+   margin: 10px;
 }
 
 div#posts-content {
    margin: 10px;
+}
+
+div#games-header {
+  margin-top: 30px; 
+  margin-bottom: 40px; 
 }
 
 h3#tools-title {
@@ -37,12 +89,15 @@ h3#tools-title {
 }
 
 img#duolingo-logo {
-   margin-left: 50%; 
    float: center; 
 }
 
+img#games {
+   margin-left: 20px;
+   margin-top: 20px;
+}
+
 img#dropbox-logo {
-  margin-left: 50%; 
   float: center; 
 }
 
@@ -50,7 +105,8 @@ div#duolingo_container  {
    text-align: center; 
    margin: 10px;
    box-shadow: 0 0 2em green;
-   padding: 25px;   
+   padding: 25px; 
+   border-radius: 20px 30px 30px 20px;
 }
 
 div#dropbox_container  {
@@ -58,10 +114,18 @@ div#dropbox_container  {
    margin: 10px;
    box-shadow: 0 0 2em blue;
    padding: 25px; 
+   border-radius: 20px 30px 30px 20px;
+}
+
+table#posts {
+   margin-right: 20px;
+   margin-left: 20px;  
+   border-radius: 20px 30px 30px 20px;
 }
 
 th {
    font-size: 14px; 
+   padding: 10px;
 }
 
 td {
@@ -71,17 +135,8 @@ td {
 }
 
 tbody {
-    box-shadow: 0 0 1em blue;
-}
-
-#nav_bar > a {
-   color: black;
-   font-size: 16px;
-   margin-left: 10px;
-}
-
-nav{ 
-   display: inline-block;
+   box-shadow: 0 0 1em;
+   border-radius: 20px 20px 20px 20px;
 }
 
 div#back_link {
@@ -100,4 +155,15 @@ td#doRight,td#doWrong {
 
 div#home-link {
    margin-left: 50%;
+}
+
+h3#matching-title {
+   margin-left: 30px; 
+   padding: 10px; 
+   margin-top: -50px;
+   margin-left: 60px;   
+}
+
+p#guide {
+   margin-left: 50px;
 }
