--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,10 +2,12 @@
 <html>
 <head>
   <title>Tefl Platform</title>
+
+  <link rel="stylesheet" type="text/css" href="home.css">
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application'=> true %>
   <%= csrf_meta_tags %>
- 
+
 </head>
 <body>
 
