--- a/app/views/students/tools.html.erb
+++ b/app/views/students/tools.html.erb
@@ -1,6 +1,9 @@
-<h3 id="tools-title"> These two APPs can take your English learning to the next level! </h3>
-    
-        <div id="duolingo_container">
+<h3 id="tools-title"> These two APPs can take your English learning to the next level! </h3><br>   
+
+<hr>
+<div id="back_link"><%= link_to 'Back',root_path %></div>
+<hr>
+       <div id="duolingo_container">
 
             <img id="duolingo-logo" src="http://icons.iconarchive.com/icons/martz90/hex/256/duolingo-icon.png" height="46" width="46">
 
@@ -23,13 +26,13 @@
 
         <script src="https://www.dropbox.com/static/api/2/dropins.js" type="text/javascript" id="dropboxjs" data-app-key="ps8sv6wjj5v125t"></script>
 
-        <!--"https://www.dropbox.com/static/api/2/dropins.js"-->
 
         <p> We strongly recommend <b>'WE TEACH. WE LEARN'</b> as a guide to make your classes <b>interactive</b> and <b>learner-centered</b>.</p>
+        
         <a href src="https://www.dropbox.com/home/TEFL?preview=teachlearn.pdf" class="dropbox-saver">Preview/download.</a><br>
     </div>
         
-<div id="back_link"><%= link_to 'Back',root_path %></div>
+
 
 
 
