--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -5,7 +5,7 @@ div#home-header {
    margin-right: 1%; 
    background-color: #49CBD6;  
    box-shadow: 0 0 1em black;
-   border-radius: 20px 20px 20px 20px;
+   border-radius: 20px 20px 20px 20px; 
 }
 
 h1 {  
@@ -28,6 +28,10 @@ button#like-button, a:hover {
     background-color: #49CBD6;
 } 
 
+h3#latest_posts, h3#latest_feedback
+   padding: 10px;   
+}
+
 h3 {
    float: auto; 
    margin-left: 10%; 
@@ -37,10 +41,13 @@ h3 {
 body { 
    font-family: verdana; 
    margin-left: 10%;  
-   margin-right: 10%;  
+   margin-right: 10%;
+   margin-top: 5%; 
+   margin-bottom: 10%; 
 } 
 
 nav > img{
+   float: auto; 
    margin-top: 20px;
    margin-bottom: 20px; 
    margin-right: -40px; 
@@ -49,12 +56,7 @@ nav > img{
 }
 
 #nav_bar > a {
-   color: black;
-   font-size: 16px;
-   margin-top: 10px; 
-   margin-bottom: 10px; 
-   margin-left: -1%;
-   margin-right: 20px; 
+   color: black; 
 }
 
 #nav_bar{ 
@@ -69,6 +71,7 @@ h3 {
 #like-button {
    margin-left: 200px; 
    box-shadow: 0 0 1em black;
+   border-radius: 20px 20px 20px 20px;
 }
 
 div#posts-titles {
@@ -92,9 +95,18 @@ img#duolingo-logo {
    float: center; 
 }
 
-img#games {
-   margin-left: 20px;
-   margin-top: 20px;
+h3#title, h3#media-title, h3#post-title {
+   margin-top: -40px; 
+   padding: 10px; 
+   margin-left: 30px; 
+}
+
+img#media-new {
+   margin-top: 10px; 
+}
+
+img#contact-tutor {
+   margin-top: -65px; 
 }
 
 img#dropbox-logo {
@@ -123,6 +135,19 @@ table#posts {
    border-radius: 20px 30px 30px 20px;
 }
 
+
+h3#title-tutor {
+   margin-left: 45px
+}
+
+table#tutor-feedback, table#tutor-table {
+   margin: 20px; 
+}
+
+span#contact-tutor-header {
+   display: inline; 
+}
+
 th {
    font-size: 14px; 
    padding: 10px;
@@ -132,11 +157,12 @@ td {
    font-size: 14px; 
    background-color: #D4D4BF; 
    padding: 15px;
+   
 }
 
 tbody {
    box-shadow: 0 0 1em;
-   border-radius: 20px 20px 20px 20px;
+   border-radius: 20px 0px 20px 20px;
 }
 
 div#back_link {
@@ -166,4 +192,10 @@ h3#matching-title {
 
 p#guide {
    margin-left: 50px;
+}
+
+footer {
+   margin-top: 50px; 
+   text-align: center; 
+   font-size: 10px; 
 }
