--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>Tefl Platform</title>
-
   <link rel="stylesheet" type="text/css" href="home.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application'=> true %>
   <%= csrf_meta_tags %>
@@ -18,4 +18,9 @@
 <%= yield %>
 
 </body>
+
+<hr>
+<footer>
+	David Navarro, 2015
+</footer>
 </html>
