--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,18 +1,25 @@
 
-<%= form_for :post, url: post_path(@post), method: :patch do |f| %>
-  <p>
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
-  </p>
+<table>
+  <tr>
+    <td>
+      <%= form_for :post, url: post_path(@post), method: :patch do |f| %>
+        <p>
+          <%= f.label :title %><br>
+          <%= f.text_field :title %>
+        </p>
 
-  <p>
-    <%= f.label :text %><br>
-    <%= f.text_area :text %>
-  </p>
+        <p>
+          <%= f.label :text %><br>
+          <%= f.text_area :text %>
+        </p>
 
-  <p>
-    <%= f.submit %>
-  </p>
-<% end %>
+        <p>
+          <%= f.submit %>
+        </p>
+      <% end %>
+    </td>
+  </tr>
+</table>
+
 
 <%= link_to 'Back', posts_path%>
