--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,12 @@
-<h3> Recent Posts </h3>
+<span id="recent-posts-header">
+  <img id="posts" src="http://icons.iconarchive.com/icons/martz90/hex/256/wordpress-icon.png" height="36" width="36"><h3 id="post-title"> Recent Posts </h3>
+</span>
+
+<hr>
+<div id="home-link">
+<%= link_to 'Home', root_path %>
+</div>
+<hr>
 
 <div id="posts-titles">
 <table> 
@@ -23,24 +31,32 @@
 
   <%= form_for :post, url: posts_path do |f| %>
 
-   <p>
-      <%= f.label :title %><br>
-      <%= f.text_field :title %>
-    </p>
+  <table>
 
-    <p>
-      <%= f.label :name %><br>
-      <%= f.text_field :name %>
-    </p>
-   
-    <p>
-      <%= f.label :text %><br>
-      <%= f.text_area :text %>
-    </p>
-   
-    <p>
-      <%= f.submit %>
-    </p>
+    <th> Post your ideas!:</th> 
+    
+    <tr>
+      <td>
+         <p>
+            <%= f.label :title %><br>
+            <%= f.text_field :title %>
+          </p>
+
+          <p>
+            <%= f.label :name %><br>
+            <%= f.text_field :name %>
+          </p>
+         
+          <p>
+            <%= f.label :text %><br>
+            <%= f.text_area :text %>
+          </p>
+         
+          <p>
+            <%= f.submit %>
+          </p>
+      </td>
+    </tr>
 <% end %>
+  </table>
 
-<%= link_to 'Home', root_path %>
