--- a/app/views/students/games.html.erb
+++ b/app/views/students/games.html.erb
@@ -1,8 +1,16 @@
 
 <div id="games-header">
-	<img id="games" src="http://icons.iconarchive.com/icons/martz90/hex/256/gamehub-icon.png" height="46" width="46">
+	<img id="match-games" src="http://icons.iconarchive.com/icons/martz90/hex/256/gamehub-icon.png" height="46" width="46">
 	<h3 id="matching-title"> Matching Game </h3>
 </div>
+
+<hr>
+
+<div id="home-link">
+	<%= link_to 'Home', root_path %>
+</div>
+
+<hr>
 
 <p id="guide"> Click on the words associated to the verb PLAY.</p>
 		
@@ -10,14 +18,14 @@
 	<table>	
 		<th><strong> PLAY </strong></th>
 		<tr>
-			<td id="doRight1"> football </td> 
+			<td id="doRight1">football </td> 
 			<td id="doRight2">ball </td> 
-			<td id="doWrong1">dead </td>
+			<td id="doWrong1">door </td>
 			<td id="doRight3">ground </td>
 			<td id="doRight4">around </td>
 			<td id="doRight5">chess </td>
 			<td id="doRight6">music </td>
-			<td id="doWrong2">fight </td>
+			<td id="doWrong2">feast </td>
 			<td id="doRight7">hockey </td>
 			<td id="doRight8">the trumpet </td>
 			<td id="doRight9">the piano </td>
@@ -121,8 +129,6 @@
 
 </script>
 
-<div id="home-link">
-	<%= link_to 'Home', root_path %>
-</div>
+
 
 
