--- a/app/views/students/media.html.erb
+++ b/app/views/students/media.html.erb
@@ -1,20 +1,35 @@
-<h3> Have fun with the latest media: </h3>
+<img id="media-new" src="http://icons.iconarchive.com/icons/martz90/hex/256/poweramp-icon.png" height="36" width="36">
 
+<h3 id="media-title"> Have fun with the latest media </h3>
 
-<p>Listen to this song by The Cure to learn the days of the week! </p>
-
-<div id="soundcloud_container">
-
-	<iframe width="50%" height="150" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/33332185&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe><br>
-</div>
-
-<p>Access your Spotify Account to start listening to our Karaoke Songs! </p> 
-
-<div id="spotify_container">
-	<iframe src="https://embed.spotify.com/?uri=spotify%3Atrack%3A4th1RQAelzqgY7wL53UGQt" width="300" height="80" frameborder="0" allowtransparency="true"></iframe><br>
-</div>
-
+<hr>
+<div id="home-link">
 <%= link_to 'Home', root_path %><br>
+</div>
+<hr>
+
+<table id="soundcloud-table">
+	<th>Listen to this song by The Cure to learn the days of the week! </th>
+	<tr>
+		<td>
+			<div id="soundcloud_container">
+				<iframe width="100%" height="150" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/33332185&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe><br>
+			</div>
+		</td>
+	</tr>
+</table>
+
+<table id="spotify-table">
+	<th>Access your Spotify Account to start listening to our Karaoke Songs! </th> 
+	<tr>
+		<td>
+			<div id="spotify_container">
+				<iframe src="https://embed.spotify.com/?uri=spotify%3Atrack%3A4th1RQAelzqgY7wL53UGQt" width="450" height="80" frameborder="0" allowtransparency="true"></iframe><br>
+			</div>
+		</td>
+	</tr>
+</table>
+
 
 
 
